force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__PrimaryStateProvinceAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryStateProvinceAbbreviation__c</fullName>
    <description>The abbreviation for the state or province where the business is physically located.</description>
    <inlineHelpText>The abbreviation for the state or province where the business is physically located.</inlineHelpText>
    <label>Primary Address State Province Abbrev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>