force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__PrimaryStreetAddress2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryStreetAddress2__c</fullName>
    <description>The second line of the address number, or post office box number, and street name where the business is located.</description>
    <inlineHelpText>The second line of the address number, or post office box number, and street name where the business is located.</inlineHelpText>
    <label>Primary Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>