force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__PrimaryUSMetropolitanArea__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryUSMetropolitanArea__c</fullName>
    <description>The name assigned to the 5-digit CBSA (Core Based Statistical Area) assigned by US Census board to denote a geographical region with a relatively high population density at its core.</description>
    <inlineHelpText>The name assigned to the 5-digit CBSA (Core Based Statistical Area) assigned by US Census board to denote a geographical region with a relatively high population density at its core.</inlineHelpText>
    <label>Primary Address US Metropolitan Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>