force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__Public_PrivateIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__Public_PrivateIndicator__c</fullName>
    <description>Indicates whether ownership of the business is public or private.</description>
    <inlineHelpText>Indicates whether ownership of the business is public or private.</inlineHelpText>
    <label>Public Private Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>