force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__RevenueTrendYear__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__RevenueTrendYear__c</fullName>
    <description>The percentage change of this item as of base year compared to the trend year.</description>
    <inlineHelpText>The percentage change of this item as of base year compared to the trend year.</inlineHelpText>
    <label>Revenue Trend Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>