force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__SalesVolumeUSDollars__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SalesVolumeUSDollars__c</fullName>
    <description>The monetary value of income received from customers from the sale of the entitys goods and/or services.  This is the gross sales minus any returns, rebates/discounts, allowances for damages or shortages, shipping expenses passed on to the customer.</description>
    <inlineHelpText>The monetary value of income received from customers from the sale of the entitys goods and/or services.  This is the gross sales minus any returns, rebates/discounts, allowances for damages or shortages, shipping expenses passed on to the customer.</inlineHelpText>
    <label>Sales Volume USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>