force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__SIC4Code1Description__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SIC4Code1Description__c</fullName>
    <description>The primary Standard Industrial Classification (SIC) description for the business.</description>
    <inlineHelpText>The primary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
    <label>SIC4 Code 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>