force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__StockExchange__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__StockExchange__c</fullName>
    <description>The name of the Stock Exchange on which the subject&apos;s shares are traded.</description>
    <inlineHelpText>The name of the Stock Exchange on which the subject&apos;s shares are traded.</inlineHelpText>
    <label>Stock Exchange</label>
    <length>50</length>
    <type>Text</type>
</CustomField>