force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__StockSymbol__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__StockSymbol__c</fullName>
    <description>Text that identifies the subject at the Stock Exchange for share trading purposes, e.g., DNB.</description>
    <inlineHelpText>Text that identifies the subject at the Stock Exchange for share trading purposes, e.g., DNB.</inlineHelpText>
    <label>Stock Symbol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>