force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__TelephoneNumber__c</fullName>
    <description>The main phone number for the entity, including the international dialing code.</description>
    <inlineHelpText>The main phone number for the entity, including the international dialing code.</inlineHelpText>
    <label>Telephone Number</label>
    <type>Phone</type>
</CustomField>