force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__WomanOwnedIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__WomanOwnedIndicator__c</fullName>
    <description>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by, and whose management and daily business operations are controlled by, one or more female persons.</description>
    <inlineHelpText>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by, and whose management and daily business operations are controlled by, one or more female persons.</inlineHelpText>
    <label>Woman Owned Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>