force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/listViews/DNBoptimizer__All.listView-meta.xml
<ListView>
    <fullName>DNBoptimizer__All</fullName>
    <columns>NAME</columns>
    <columns>DNBoptimizer__DUNSNumber__c</columns>
    <columns>DNBoptimizer__ParentDUNSNumber__c</columns>
    <columns>DNBoptimizer__BusinessName__c</columns>
    <columns>DNBoptimizer__combined_address__c</columns>
    <columns>DNBoptimizer__PrimaryCityName__c</columns>
    <columns>DNBoptimizer__PrimaryStateProvinceName__c</columns>
    <columns>DNBoptimizer__PrimaryCountryName__c</columns>
    <columns>DNBoptimizer__SIC4Code1__c</columns>
    <columns>DNBoptimizer__SIC4Code1Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>